# STU-LBX_Manager

./: CMakeLists.txt  MoM131_LBX.txt  README.md
LbxMgr/: LbxMgr.cpp  LbxMgr.h  LbxMgrDecodeRunLengthEncoded.cpp  LbxMgrDecodeRunLengthEncoded.h  LbxMgrExport.cpp  LbxMgrExport.h  LbxMgrExportCsv.cpp  LbxMgrExportCsv.h  LbxMgrExportGraphics.cpp  LbxMgrExportGraphics.h  LbxMgrLoadLbxData.cpp  LbxMgrLoadLbxData.h  LbxMgrMenu.cpp  LbxMgrMenu.h  LbxMgrPathsNames.cpp  LbxMgrPathsNames.h  LbxMgrProcess.cpp  LbxMgrProcess.h  LbxMgrProcess_v1.cpp  LbxMgrProcess_v1.h  LbxMgrProcess_v2.cpp  LbxMgrProcess_v2.h  LbxMgrTest.cpp  LbxMgrTest.h  MoMRTGT__convertLbxToImages.cpp  MoMRTGT__convertLbxToImages.h
LbxMgr/ATS/: Util_CmdLnArg.cpp  Util_CmdLnArg.h  Util_FileSystem.c  Util_FileSystem.h  Util_Generic.cpp  Util_Generic.h  Util_ProgOperParm.cpp  Util_ProgOperParm.h  ats.c  ats.h  ats_cli_menu.cpp  ats_cli_menu.h  ats_crc32.c  ats_crc32.h  ats_endian.c  ats_endian.h  ats_endian.md  ats_file.c  ats_file.h  ats_file_type_bmp.c  ats_file_type_bmp.h  ats_file_type_bmp_indexed.c  ats_file_type_bmp_indexed.h  ats_file_type_bmp_nonindexed.c  ats_file_type_bmp_nonindexed.h  ats_file_type_colormap.c  ats_file_type_colormap.h  ats_filenames.c  ats_filenames.h  ats_filesystem.c  ats_filesystem.h  ats_sdl2.h  file_type_col.c  file_type_col.h  file_type_drv.c  file_type_drv.h  flic.h
LbxMgr/LBX_Library_FrontEnd/: ClassLBX.cpp  ClassLBX.h
LbxMgr/MoM-RTGT/: .gitignore  Common.pri  Doxyfile  Makefile  MoMCore.pro  MoMCustomizer.pro  MoMTest.pro  MoMTweaker.pri  MoMTweaker.pro  README.txt
LbxMgr/MoM-RTGT/Applications/MindyEngine/: BUILD_MOM.bat  MoMCore.cpp  MoMCore.h  README.txt  example_momai.py  example_momgame.py  example_momhook.py  example_momprocess.py  mom.i
LbxMgr/MoM-RTGT/Applications/MoMCustomizer/: CHANGES.txt  DialogWizard.cpp  DialogWizard.h  DialogWizard.ui  FormGameOptions.cpp  FormGameOptions.h  FormGameOptions.ui  FormMagicPickScreen.cpp  FormMagicPickScreen.h  FormMagicPickScreen.ui  FormSelectBanner.cpp  FormSelectBanner.h  FormSelectBanner.ui  FormSelectRaces.cpp  FormSelectRaces.h  FormSelectRaces.ui  FormSelectSpells.cpp  FormSelectSpells.h  FormSelectSpells.ui  FormSelectWizard.cpp  FormSelectWizard.h  FormSelectWizard.ui  FormWizardsName.cpp  FormWizardsName.h  FormWizardsName.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
LbxMgr/MoM-RTGT/Applications/MoMCustomizer/Resources/: QMoMCustomizer.qrc
LbxMgr/MoM-RTGT/Applications/MoMTest/: REFTEST.GAM
LbxMgr/MoM-RTGT/Applications/MoMTest/Test/: qrc_InteractiveGameTweaker.cpp  test_main.cpp  test_utility.cpp  test_utility.h  tst_momcombat.cpp  tst_momgamebase.cpp  tst_momtweaker_mainwindow.cpp
LbxMgr/MoM-RTGT/Applications/MoMTweaker/: CHANGES.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
LbxMgr/MoM-RTGT/MoMControl/: MoMCatnip.cpp  MoMCatnip.h  MoMCombat.cpp  MoMController.cpp  MoMController.h  MoMHookManager.cpp  MoMHookManager.h  MoMLevelBonuses.cpp  MoMLevelBonuses.h  MoMManageCities.cpp  MoMManageCities.h
LbxMgr/MoM-RTGT/MoMModel/: MoMCity.cpp  MoMCity.h  MoMCombat.h  MoMExeMagic.cpp  MoMExeMagic.h  MoMExeWizards.cpp  MoMExeWizards.h  MoMFli.cpp  MoMFli.h  MoMGameBase.cpp  MoMGameBase.h  MoMGameCustom.cpp  MoMGameCustom.h  MoMGameMemory.cpp  MoMGameMemory.h  MoMGameSave.cpp  MoMGameSave.h  MoMLbxBase.cpp  MoMLbxBase.h  MoMLocation.h  MoMResources.h  MoMTemplate.h  MoMTerrain.cpp  MoMTerrain.h  MoMUnit.cpp  MoMUnit.h
LbxMgr/MoM-RTGT/Platform/: MoMCommon.h  MoMExeBase.cpp  MoMExeBase.h  MoMProcess.h  MoMProcessCommon.cpp  MoMProcessLinux.cpp  MoMProcessWindows.cpp
LbxMgr/MoM-RTGT/QMoMCommon/: QMapGraphicsView.cpp  QMapGraphicsView.h  QMoMAnimation.cpp  QMoMAnimation.h  QMoMAnimationTile.cpp  QMoMAnimationTile.h  QMoMDialogBase.cpp  QMoMDialogBase.h  QMoMGifHandler.cpp  QMoMGifHandler.h  QMoMLazyIcon.h  QMoMLbx.cpp  QMoMLbx.h  QMoMMapScene.cpp  QMoMMapScene.h  QMoMMapTile.cpp  QMoMMapTile.h  QMoMResources.cpp  QMoMResources.h  QMoMSettings.cpp  QMoMSettings.h  QMoMSharedPointers.h  QMoMTableItem.cpp  QMoMTableItem.h  QMoMTreeItemModel.cpp  QMoMTreeItemModel.h  QMoMTreeItemWidget.cpp  QMoMTreeItemWidget.h  QMoMUnitTile.cpp  QMoMUnitTile.h  QMoMUtility.cpp  QMoMUtility.h  UnitModel.cpp  UnitModel.h
LbxMgr/MoM-RTGT/QMoMDialogs/: DialogAddArtifact.cpp  DialogAddArtifact.h  DialogAddArtifact.ui  DialogAddUnit.cpp  DialogAddUnit.h  DialogAddUnit.ui  DialogBuildingTree.cpp  DialogBuildingTree.h  DialogBuildingTree.ui  DialogCalculatorAddress.cpp  DialogCalculatorAddress.h  DialogCalculatorAddress.ui  DialogExternalAI.cpp  DialogExternalAI.h  DialogExternalAI.ui  DialogLbxEditor.cpp  DialogLbxEditor.h  DialogLbxEditor.ui  DialogManageCities.cpp  DialogManageCities.h  DialogManageCities.ui  DialogMap.cpp  DialogMap.h  DialogMap.ui  DialogSelectInitialSpells.cpp  DialogSelectInitialSpells.h  DialogSelectInitialSpells.ui  DialogSelectRaces.cpp  DialogSelectRaces.h  DialogSelectRaces.ui  DialogTables.cpp  DialogTables.h  DialogTables.ui  DialogTools.cpp  DialogTools.h  DialogTools.ui
LbxMgr/MoM-RTGT/Resources/: InteractiveGameTweaker.qrc  MoMEditorTemplate.aps  MoMEditorTemplate.rc  resource.h
LbxMgr/MoM-RTGT/Resources/images/: hand.cur
LbxMgr/MoM-RTGT/Utility/: MoMUtility.cpp  MoMUtility.h  TeeRedirecter.h
LbxMgr/MoM-RTGT/asm/: Experience_bonus.asm  README.txt  Unit_strategy_exe_hooked.asm  set_hero_slot_types.asm
LbxMgr/MoM-RTGT/giflib-5.0.4/lib/: dgif_lib.cpp  egif_lib.cpp  gif_hash.cpp  gif_hash.h  gif_lib.h  gif_stdint.h  gif_unistd.h
LbxMgr/MoM-RTGT/scripts/: MoMCustomizer.sh  MoMTweaker.sh  MoM_patch.sh  build.sh  generate_code.pl
LbxMgr/MoM-RTGT/xml/: MemoryLayout.xsd  MemoryLayoutTest.xml  momrtgt.xml  momrtgt.xsd
LbxMgr/MoM131/: MoM_131_LBX_Files.h
LbxMgr/SDL2/: sdl_colormap.cpp
docs/: LBX_API-ExtractResources.ods  cmake_SDL2Config.txt  sdl2_test.txt
html/: md__r_e_a_d_m_e.html  pages.html
html/search/: all_0.js  pages_0.js
latex/: refman.tex
